# KolmOCR

./: CHANGELOG.md  Dockerfile  Dockerfile.with-model  README.md  accelerate_config.yaml  pyproject.toml
configs/: default_config.yaml  kolmocr_bench_pipeline.yaml  kolmocr_eval.yaml  kolmocr_infer.yaml  kolmocr_infer_vllm.yaml
kolmocr_bench/coding_tasks_md/BankApp.java/: BankApp.java.html  BankApp.java.md
kolmocr_bench/coding_tasks_md/StudentGradeApp.java/: StudentGradeApp.java.html  StudentGradeApp.java.md
kolmocr_bench/coding_tasks_md/TodoApp.java/: TodoApp.java.html  TodoApp.java.md
kolmocr_bench/coding_tasks_md/account_book.c/: account_book.c.html  account_book.c.md
kolmocr_bench/coding_tasks_md/flashcards.py/: flashcards.py.html  flashcards.py.md
kolmocr_bench/coding_tasks_md/image_tool.py/: image_tool.py.html  image_tool.py.md
kolmocr_bench/coding_tasks_md/log_analyzer.py/: log_analyzer.py.html  log_analyzer.py.md
kolmocr_bench/coding_tasks_md/md_to_html.c/: md_to_html.c.html  md_to_html.c.md
kolmocr_bench/coding_tasks_md/news_crawler.c/: news_crawler.c.html  news_crawler.c.md
kolmocr_bench/coding_tasks_md/notepad.c/: notepad.c.html  notepad.c.md
kolmocr_bench/graphic/alpha_calc_intro/: alpha_calc_intro.md
kolmocr_bench/graphic/exp1/: exp1.md
kolmocr_bench/graphic/festival_catalog/: festival_catalog.md
kolmocr_bench/graphic/figure_in_table/: figure_in_table.md
kolmocr_bench/graphic/pic_catalog/: pic_catalog.md
kolmocr_bench/graphic/posicube_1/: posicube_1.md
kolmocr_bench/graphic/posicube_2/: posicube_2.md
kolmocr_bench/graphic/report/: report.md
kolmocr_bench/graphic/text_in_fig2/: text_in_fig2.md
kolmocr_bench/graphic/text_in_figure/: text_in_figure.md
kolmocr_bench/multicolumn/3cols/: 3col.pptx  3cols.md
kolmocr_bench/multicolumn/4cols/: 4cols.md  4cols.pptx
kolmocr_bench/multicolumn/529c0e36ceb9881d6f2fbf9e86f8f3d99553-7/: 529c0e36ceb9881d6f2fbf9e86f8f3d99553-7.html  529c0e36ceb9881d6f2fbf9e86f8f3d99553-7.md
kolmocr_bench/multicolumn/a72cd62dab4563697730789f0b73450d946a-1/: a72cd62dab4563697730789f0b73450d946a-1.html  a72cd62dab4563697730789f0b73450d946a-1.md
kolmocr_bench/multicolumn/ct-put-2024-03-05-02-49-07-a0f4d6b6-e021-4b4d-af5e-ce5143f175b3-16/: ct-put-2024-03-05-02-49-07-a0f4d6b6-e021-4b4d-af5e-ce5143f175b3-16.html  ct-put-2024-03-05-02-49-07-a0f4d6b6-e021-4b4d-af5e-ce5143f175b3-16.md
kolmocr_bench/multicolumn/ct-put-2024-03-05-09-24-54-e3e6f344-daf5-4052-b5ae-9e32257cca5a-211/: ct-put-2024-03-05-09-24-54-e3e6f344-daf5-4052-b5ae-9e32257cca5a-211.html  ct-put-2024-03-05-09-24-54-e3e6f344-daf5-4052-b5ae-9e32257cca5a-211.md
kolmocr_bench/multicolumn/exp1/: exp1.md  exp1.pptx
kolmocr_bench/multicolumn/gen_ai/: gen_ai.md  gen_ai.pptx
kolmocr_bench/multicolumn/posicube_history/: posicube_history.md
kolmocr_bench/multicolumn/posicube_intro/: posicube_intro.md
kolmocr_bench/table/table_01/: table_01.html  table_01.md
kolmocr_bench/table/table_02/: table_02.html  table_02.md
kolmocr_bench/table/table_10/: table_10.html  table_10.md
kolmocr_bench/table/table_115/: table_115.html  table_115.md
kolmocr_bench/table/table_13/: table_13.html  table_13.md
olmocr/: README.md  inference_kolmocr_transformer.py  inference_kolmocr_vllm.py  pipeline.py
olmocr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
olmocr/bench/: README.md
olmocr/data/: renderpdf.py
olmocr/kolmocr_eval/: README.md  __init__.py
olmocr/prompts/: anchor.py
olmocr/train/: README.md  config.py  dataloader.py  prepare_checkpoint.py  train.py
scripts/: 6_run_script.md  check_contamination.py  hf_local_test.py  post_install.py  remove_paths_from_olmocrmix.py  run_benchmark.sh  run_infrapartner_benchmark.sh  run_integration_test.sh  run_kolmocr_pipeline.py  run_mineru_benchmark.sh  run_paddle_benchmark.sh  run_paddlevl_benchmark.sh  sync_beaker_image.sh
scripts/plots/: pareto_plot.py  plot_olmocr2_timeline.py
scripts/train/: grpotrainer-beaker-multi-gpu-augusta.sh  grpotrainer-beaker-multi-gpu.sh  grpotrainer-beaker.sh  newtrainer-beaker.sh
tests/: sample_dataset_bbox_config.yaml  test_bbox_tokens.py  test_dataloader.py  test_pdf_renderer.py  test_process_md_direct.py
tests/md2pdf/: test_convert_html.py  test_markdown_blocks.py  test_md2pdf.py  test_md2pdf_pipeline.py
tests/sample_dataset/: urls.jsonl
(+511 files in other folders)
